Fixing overflow bug again

--- a/style/style.css
+++ b/style/style.css
@@ -90,6 +90,7 @@
 
 .card-desc{
     font-size: 20px;
+    padding: 2px;
 }
 
 .card-footer{
